--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,5 +6,14 @@ logging:
     org.springframework : DEBUG
 
 spring:
+    mvc:
+        pathmatch:
+            matching-strategy: ant_path_matcher
     messages:
         basename: messages
+
+management:
+    endpoints:
+        web:
+            exposure:
+                include: "*"
