--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,10 @@
             <artifactId>spring-data-rest-hal-explorer</artifactId>
             <version>3.7.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
