--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
             matching-strategy: ant_path_matcher
     messages:
         basename: messages
+#    security:
+#        user:
+#            name: user
+#            password: 1234
 
 management:
     endpoints:
