--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,15 @@ spring:
 #            name: user
 #            password: 1234
 
+    jpa:
+        show-sql: true
+    h2:
+        console:
+            enabled: true
+    datasource:
+        url: jdbc:h2:mem:testdb
+        username: sa
+
 management:
     endpoints:
         web:
