Spring Data JPA를 이용한 Entity 설정과 초기 데이터 생성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,12 +18,14 @@ spring:
 
     jpa:
         show-sql: true
+        defer-datasource-initialization: true
     h2:
         console:
             enabled: true
     datasource:
         url: jdbc:h2:mem:testdb
         username: sa
+
 
 management:
     endpoints:
